--- a/index.html
+++ b/index.html
@@ -357,7 +357,15 @@ display: none;
 </div>
 
 
-<p>Hello world!</p>
+<div id="analysis-plan" class="section level2">
+<h2>Analysis Plan</h2>
+<ul>
+<li><a href="rmarkdown-practice.html">Data Cleaning</a></li>
+<li>Data interpolation and gap filling</li>
+<li>Linear Models</li>
+<li>Data Visualization</li>
+</ul>
+</div>
 
 
 
